# mcp-research-server-on-EC2

./: README.md  pyproject.toml  server.py  server_local.py
