[project]
name = "7-research-assistant-mcp-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.5",
    "fastmcp>=2.13.2",
    "langchain>=1.1.3",
    "langchain-chroma>=1.0.0",
    "langchain-core>=1.1.2",
    "langchain-mcp-adapters>=0.1.14",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.1.1",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.4",
    "mcp-remote>=0.1.0",
    "mcp[cli]>=1.23.2",
    "requests>=2.32.5",
]
